--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+boto3==1.26.4
+botocore==1.29.16
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+country-converter==0.8.0
 Flask==2.2.2
 Flask-Cors==3.0.10
+geographiclib==1.52
+geopy==2.2.0
 gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.1
+numpy==1.23.5
+pandas==1.5.2
+Pillow==9.3.0
 psycopg2-binary==2.9.4
 PyJWT==2.0.0
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+pytz==2022.6
 requests==2.28.1
+s3transfer==0.6.0
 six==1.16.0
 urllib3==1.26.12
 Werkzeug==2.2.2
-boto3==1.26.04
-geopy==2.2
-pillow==9.3.0
-botocore
